--- a/Integrated/New folder/style.css
+++ b/Integrated/New folder/style.css
@@ -1,6 +1,10 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 25px;
+    margin-left: 25px;
+    max-width: 310mm; /* A4 paper width */
+    margin: 0 auto;
+    /* border: 1px solid rgb(204, 204, 204); */
+    border-bottom: #e6e6e6;
 }
 p {
     font-size: 18px; /* Adjust the size as needed */
@@ -9,6 +13,16 @@ table {
     border-collapse: collapse;
     width: 100%;
 }
+#headers {
+    background-color: #333; /* Background color */
+    color: white; /* Text color */
+    padding: 20px; /* Padding around content */
+    text-align: center;
+    border: 5px solid #555; /* Border on all sides */
+    background-size: 210mm 297mm; /* A4 paper size */
+    margin: 0 auto;
+}
+
 th, td {
     border: 2px solid #ddd;
     padding: 8px;
@@ -22,7 +36,7 @@ th {
     overflow-y: scroll;
     /* margin-left: 5px; */
     margin-right: calc(80% );
-    width: 30%;
+    width: 50%;
 }
 .scrollable::-webkit-scrollbar {
     width: 15px; /* Set the width of the scrollbar */
@@ -40,7 +54,7 @@ th {
 .scrollable::-webkit-scrollbar-track:hover {
     background-color: #ddd; /* Set the color of the track on hover */
 }
-/* #selectedTable {
+#selectedTable {
     margin-top: 20px;
 }
 .selectedTable td {
@@ -48,18 +62,21 @@ th {
 }
 
 #selectedTables {
-    margin-top: 20px;
+    width: 100%; /* Add this line to make it take up the full width */
+    box-sizing: border-box; /* Include padding and border in the element's total width */
+    padding: 20px;
+    margin: 0;
 }
-.selectedTables td {
+/* .selectedTables td {
     position: relative;
-}
+} */
 
 #selectedTablesd {
     margin-top: 20px;
 }
 .selectedTablesd td {
     position: relative;
-} */
+}
 .heatmap {
     position: absolute;
     top: 0;
@@ -70,7 +87,7 @@ th {
 }
 
 input[type="checkbox"] {
-    width: 24px; /* Adjust the width as needed */
+    width: 40px; /* Adjust the width as needed */
     height: 24px; /* Adjust the height as needed */
     margin: 0; /* Remove any default margin */
 }
@@ -78,7 +95,7 @@ input[type="checkbox"] {
 select {
     font-size: 16px; /* Adjust the size as needed */
     padding: 8px;    /* Adjust the padding as needed */
-    margin-left: 2px;
+    margin-left: 5px;
 }
 /* Increase the size of the buttons */
 button {
@@ -89,6 +106,7 @@ button {
 #atAGlance {
     margin-top: 15px;
     margin-left: 2px;
+    margin-bottom: 0%;
 }
 /* #menu-container {
     margin-bottom: 20px; 
@@ -107,12 +125,12 @@ button {
     overflow: hidden;
 } */
 #content {
-    margin-right: 270px; /* Adjust margin to accommodate the menu width */
+    /* margin-right: 500px;  */
     padding: 20px;
 }
 
 #glance {
-    margin-right: 270px; /* Adjust margin to accommodate the menu width */
+    
     padding: 0px;
 }
 
@@ -123,7 +141,7 @@ button {
 #menuWindow {
     display: none;
     position: fixed;
-    top: 30%;
+    top: 20%;
     left: 55%;
     transform: translate(-50%, -50%);
     padding: 20px;
@@ -169,4 +187,22 @@ button {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+#chart {
+    width: 100%;    
+    padding: 20px;
+    max-width: 310mm;
+}
+
+#charts {
+    width: 100%;    
+    padding: 20px;
+    max-width: 310mm;
+}
+
+#chartsd {
+    width: 100%;    
+    padding: 20px;
+    max-width: 310mm;
 }
