--- a/Integrated/New folder/style.css
+++ b/Integrated/New folder/style.css
@@ -1,10 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    margin-left: 25px;
-    max-width: 310mm; /* A4 paper width */
-    margin: 0 auto;
-    /* border: 1px solid rgb(204, 204, 204); */
-    border-bottom: #e6e6e6;
+    margin: 25px;
 }
 p {
     font-size: 18px; /* Adjust the size as needed */
@@ -13,16 +9,6 @@ table {
     border-collapse: collapse;
     width: 100%;
 }
-#headers {
-    background-color: #333; /* Background color */
-    color: white; /* Text color */
-    padding: 20px; /* Padding around content */
-    text-align: center;
-    border: 5px solid #555; /* Border on all sides */
-    background-size: 210mm 297mm; /* A4 paper size */
-    margin: 0 auto;
-}
-
 th, td {
     border: 2px solid #ddd;
     padding: 8px;
@@ -36,7 +22,7 @@ th {
     overflow-y: scroll;
     /* margin-left: 5px; */
     margin-right: calc(80% );
-    width: 50%;
+    width: 30%;
 }
 .scrollable::-webkit-scrollbar {
     width: 15px; /* Set the width of the scrollbar */
@@ -60,23 +46,6 @@ th {
 .selectedTable td {
     position: relative;
 }
-
-#selectedTables {
-    width: 100%; /* Add this line to make it take up the full width */
-    box-sizing: border-box; /* Include padding and border in the element's total width */
-    padding: 20px;
-    margin: 0;
-}
-/* .selectedTables td {
-    position: relative;
-} */
-
-#selectedTablesd {
-    margin-top: 20px;
-}
-.selectedTablesd td {
-    position: relative;
-}
 .heatmap {
     position: absolute;
     top: 0;
@@ -87,7 +56,7 @@ th {
 }
 
 input[type="checkbox"] {
-    width: 40px; /* Adjust the width as needed */
+    width: 24px; /* Adjust the width as needed */
     height: 24px; /* Adjust the height as needed */
     margin: 0; /* Remove any default margin */
 }
@@ -95,7 +64,7 @@ input[type="checkbox"] {
 select {
     font-size: 16px; /* Adjust the size as needed */
     padding: 8px;    /* Adjust the padding as needed */
-    margin-left: 5px;
+    margin-left: 2px;
 }
 /* Increase the size of the buttons */
 button {
@@ -106,7 +75,6 @@ button {
 #atAGlance {
     margin-top: 15px;
     margin-left: 2px;
-    margin-bottom: 0%;
 }
 /* #menu-container {
     margin-bottom: 20px; 
@@ -125,13 +93,13 @@ button {
     overflow: hidden;
 } */
 #content {
-    /* margin-right: 500px;  */
+    margin-right: 270px; /* Adjust margin to accommodate the menu width */
     padding: 20px;
 }
 
 #glance {
-    
-    padding: 0px;
+    margin-right: 270px; /* Adjust margin to accommodate the menu width */
+    padding: 20px;
 }
 
 .newRowClass {
@@ -141,7 +109,7 @@ button {
 #menuWindow {
     display: none;
     position: fixed;
-    top: 20%;
+    top: 30%;
     left: 55%;
     transform: translate(-50%, -50%);
     padding: 20px;
@@ -187,22 +155,4 @@ button {
         opacity: 1;
         transform: translateY(0);
     }
-}
-
-#chart {
-    width: 100%;    
-    padding: 20px;
-    max-width: 310mm;
-}
-
-#charts {
-    width: 100%;    
-    padding: 20px;
-    max-width: 310mm;
-}
-
-#chartsd {
-    width: 100%;    
-    padding: 20px;
-    max-width: 310mm;
 }
